# CDCUtilities

./: .gitignore  pyproject.toml
src/cdcutilities/: __init__.py
src/cdcutilities/text/: numbers.py  time.py
